[FIX] fix note definition meaning link appearance on mobile

--- a/styling.css
+++ b/styling.css
@@ -314,6 +314,7 @@
 
 .definitionMeaning a {
     color: inherit;
+    text-decoration: none;
 }
 
 .definitionMeaning a:hover {
